fixing background color issues with png images in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -45,3 +45,8 @@
   box-shadow: 0 0 0.5em lightgray;
 }
 
+.imgWhiteBackground {
+  background-color: rgba(255,255,255, 0.5);
+  padding: 15px;
+  border-radius: 5px;
+}
